# Star-Wars-API

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  settings.py
app/: app.py  router.py
app/api/: endpoint.py
app/models/: swapi_models.py
app/services/: swapi.py
core/: cache_in_memory.py  settings.py
tests/: test_swapi.py
