[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "star-wars-api"
version = "1.0.0"
description = "Star Wars API platform with Python - Technical challenge for PowerOfData"
authors = ["Heitor Vaz <heitor@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
PyJWT = "^2.11.0"
python-multipart = "^0.0.6"
redis = "^5.0.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
black = "^23.12.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
